k8s/dev/configMap.yml

apiVersion: v1
kind: Namespace
metadata:
  name: cita-dev-ns
