k8s/dev/app-depl.yml

apiVersion: v1
kind: Namespace
metadata:
  name: cita-dev-ns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cita-backend-app-deployment
  namespace: cita-dev-ns
  labels:
    app: cita-backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cita-backend-app
  template:
    metadata:
      labels:
        app: cita-backend-app
    spec:
      containers:
        - name: cita-backend-app
          image: selimhorri/cita-backend-app:dev
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8400
---

apiVersion: v1
kind: Service
metadata:
  name: cita-backend-app-service
  namespace: cita-dev-ns
spec:
  selector:
    app: cita-backend-app
  #type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8400
      targetPort: 8400
      #nodePort: 30001
