k8s/dev/mysql-depl.yml

apiVersion: v1
kind: Namespace
metadata:
  name: cita-dev-ns

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: cita-dev-ns
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: cita-dev-ns
spec:
  selector:
    app: mysql
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 30002
