k8s/dev/ingress.yml

apiVersion: v1
kind: Namespace
metadata:
  name: cita-dev-ns

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: cita-dev-ns
  #labels:
  #  name: app-ingress
spec:
  rules:
    - host: cita.tn
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: cita-backend-app-service
                port: 
                  number: 8400
